<resources>
    <string name="app_name">nooi</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="action_sign_in">Login</string>
    <string name="type_of_event">what Event?</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="err_msg_name">Enter full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_mobile">Enter valid mobile number</string>
    <string name="err_msg_otp">Enter OTP</string>
    <string name="err_msg_password">Enter valid password</string>
    <string name="err_msg_country_code">Enter valid Country code</string>
    <string name="not_attending">Not Attending</string>
    <string name="createevent">Create an Event / Invite</string>
    <string name="create_invitee">Add Contacts</string>
    <string name="feedback">Feedback</string>
    <string name="mute">Mute</string>
    <string name="coupon_detials">Coupon Details</string>
    <string name="invite">Invite</string>
    <string name="about_us">About</string>
    <string name="logout">Logout</string>
    <string name="attending">Attending</string>
    <string name="artwork">Artwork</string>
    <string name="error_network_timeout">Time Out Error</string>
    <string name="error_network_server">Server error</string>
    <string name="list">Active Events</string>
    <string name="no_Active_events">No Active Events!!</string>
    <string name="action_settings">Settings</string>
    <string name="organiser_login">Organiser login</string>
    <string name="more">More…</string>
    <string name="n">Saurabh Vodafone</string>
    <string name="p">+91 8147494497</string>
    <string name="h">Select Invitee (Please Invite yourself too)</string>
    <string name="push_error">Do not insert more than 100 characters</string>
    <string name="no_coupon_code">No Coupon Detials</string>
    <string name="version">1.01</string>
    <string name="cancelled">Cancelled / NA Events</string>
    <string name="concluded">Concluded Events</string>
    <string name="add_more">Add More</string>
    <string name="successfully_created">Successfully Created!!</string>
    <string name="nooilink"><a href="http://www.nooitheinviteapp.com">www.nooitheinviteapp.com</a></string>
    <string name="send">Send</string>
    <string name="this_feature_is_not_available_for_this_event">This feature is not available for this Event</string>
    <string name="type_your_message">Type your message..</string>
    <string name="tell_the_organiser_that_you_are_not_attending">Tell the Organiser that you are not attending?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="developed_by_hanle_solutions">Developed by Hanle Solutions</string>
    <string name="submit">Submit</string>
    <string name="otp">OTP</string>
    <string name="please_enter_the_otp_you_have_recieved">Please enter the OTP you have recieved</string>
    <string name="nooi">nooi</string>
    <string name="you_need_to_be_invited_or_sign_up">You need to be invited or sign up</string>
</resources>