<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:background="@drawable/nooi_loki" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:elevation="10dp"
                android:text="@string/nooi"
                android:textColor="#000000"
                android:textSize="25sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:text="@string/please_enter_the_otp_you_have_recieved"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintTextAppearance="@style/TextLabel"
                app:passwordToggleContentDescription="Password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <EditText
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/otp"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textColorHint="#fef9f9" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/submit_otp"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="35dp"
                android:background="@color/toolbar"
                android:text="@string/submit"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/termscondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/developed_by_hanle_solutions"
                android:textColor="#000000" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
