<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#ffffff">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.events.hanle.events.UserChangeOfDescision">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/htab_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="top"
                app:layout_collapseMode="pin"
                app:titleMarginTop="13dp" />
        </android.support.design.widget.AppBarLayout>


        <TextView
            android:id="@+id/caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/tell_the_organiser_that_you_are_not_attending"
            android:textColor="#000"
            android:textSize="18sp"
            android:typeface="serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <RadioGroup
                android:id="@+id/rgroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/yes_r"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/yes"
                android:checked="false"
                android:textColor="@color/toolbar"
                android:typeface="serif" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/no_r"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/no"
                android:checked="true"
                android:textColor="@color/toolbar"
                android:typeface="serif" />
            </RadioGroup>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/toolbar"
            android:gravity="center"
            android:shadowColor="@android:color/white"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:typeface="serif"
            android:layout_margin="25dp" />

    </LinearLayout>

</ScrollView>
